Fixed text align for sidebar buttons

--- a/styles.css
+++ b/styles.css
@@ -115,20 +115,24 @@ body {
     line-height: 56px;
 }
 
-.sidebar div {
+.sidebar-button {
     background: #DDE2FF;
 }
 
-.sidebar div a:hover{
+.sidebar-button a:hover{
     color: #DDE2FF;
     margin-left: 3px;
     transition: 0.3s;
     background: #3E4049;
 }
 
-.sidebar div a img {
-    width: 14px;
-    margin-right: 22px;
+.sidebar-icon-div {
+    display: flex;
+}
+
+.sidebar-button a img {
+    width: 15px;
+    margin-right: 30px;
     margin-left: 10px;
 }
 
@@ -159,6 +163,7 @@ body {
 
 .biometrics-content {
     display: flex;
+    width: 962px;
     flex-direction: row;
     margin-top: 40px;
     justify-content: space-between;
